# server/backend/controllers/cctv.js
@@ -25,6 +25,10 @@ const create = async (req, res, next) => {
 const findAll = async (req, res, next) => {
   try {
     const { list_size, page, range } = req.query;
+    if (!(list_size && page && range)) {
+      res.status(400).send("Pagination query paramters required.");
+      return;
+    }
     const cctv = await CCTVRepository.findAll(list_size, page, range);
     res.json(cctv);
   } catch (err) {
